--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -26,7 +26,7 @@
       <authentication mode="None" />
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
-      <customErrors mode="RemoteOnly" defaultRedirect="/error.html">
+      <customErrors mode="Off" defaultRedirect="/error.html">
       </customErrors>
     </system.web>
   <system.webServer>
