Playing with application settings
Changing the settings from applicationSettings to appSettings in an
effort to get AzureWebsites portal config to override properly

--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -20,6 +20,8 @@
       <add key="webpages:Enabled" value="false" />
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+        <add key="Google_ClientId"  value="535723739290-6ai82na64imevolge799b3tcf4veq6lc.apps.googleusercontent.com"/>
+        <add key="Google_ClientSecret" value="cqQVD1uSW7rTZN_2yIr4Q3nX"/>
     </appSettings>
     <system.web>
       <authentication mode="None" />
@@ -115,13 +117,6 @@
       </setting>
       <setting name="team_team_orphans_link" serializeAs="String">
         <value>https://www.teamorphans.com</value>
-      </setting>
-        <!-- NOTE: These are dev-environment only keys -->
-      <setting name="Google_ClientId" serializeAs="String">
-        <value>535723739290-6ai82na64imevolge799b3tcf4veq6lc.apps.googleusercontent.com</value>
-      </setting>
-      <setting name="Google_ClientSecret" serializeAs="String">
-        <value>cqQVD1uSW7rTZN_2yIr4Q3nX</value>
       </setting>
     </virtualtri.Properties.Settings>
   </applicationSettings>
