--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -92,28 +92,28 @@
   <applicationSettings>
     <virtualtri.Properties.Settings>
       <setting name="team_name" serializeAs="String">
-        <value>!!!Unspecified!!!</value>
+        <value>Rebecca</value>
       </setting>
       <setting name="start_date" serializeAs="String">
-        <value>now</value>
+        <value>5/11/2015</value>
       </setting>
       <setting name="end_date" serializeAs="String">
-        <value>!!!Unspecified!!!</value>
+        <value>10/11/2015</value>
       </setting>
       <setting name="target_event_name" serializeAs="String">
-        <value>Target Event Name</value>
+        <value>Ironman Louisville</value>
       </setting>
       <setting name="target_event_description" serializeAs="String">
         <value>Really long target event description. This says a few things about the event and makes people want to join.</value>
       </setting>
       <setting name="target_event_link" serializeAs="String">
-        <value>http://www.google.com</value>
+        <value>http://www.ironman.com/triathlon/events/americas/ironman/louisville.aspx</value>
       </setting>
       <setting name="team_contact_email" serializeAs="String">
-        <value>virtualiron@someone.com</value>
+        <value>rebecca@teamorphans.com</value>
       </setting>
       <setting name="team_fundraising_link" serializeAs="String">
-        <value>http://www.google.com</value>
+        <value>https://www.teamorphans.com/rebecca/</value>
       </setting>
       <setting name="team_team_orphans_link" serializeAs="String">
         <value>https://www.teamorphans.com</value>
