Fixing the event description

--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -104,7 +104,7 @@
         <value>Ironman Louisville</value>
       </setting>
       <setting name="target_event_description" serializeAs="String">
-        <value>Really long target event description. This says a few things about the event and makes people want to join.</value>
+        <value>A late-season race featuring idyllic fall temperatures and an urban finish line.</value>
       </setting>
       <setting name="target_event_link" serializeAs="String">
         <value>http://www.ironman.com/triathlon/events/americas/ironman/louisville.aspx</value>
