Making updates for the 2016 season

--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -91,32 +91,32 @@
     </entityFramework>
   <applicationSettings>
     <virtualtri.Properties.Settings>
+      <setting name="team_team_orphans_link" serializeAs="String">
+        <value>https://www.teamorphans.com</value>
+      </setting>
       <setting name="team_name" serializeAs="String">
         <value>Rebecca</value>
       </setting>
       <setting name="start_date" serializeAs="String">
-        <value>5/11/2015</value>
+        <value>4/1/2016</value>
       </setting>
       <setting name="end_date" serializeAs="String">
-        <value>10/11/2015</value>
+        <value>9/30/2016</value>
       </setting>
       <setting name="target_event_name" serializeAs="String">
-        <value>Ironman Louisville</value>
+        <value>Ironman Wisconsin</value>
       </setting>
       <setting name="target_event_description" serializeAs="String">
-        <value>A late-season race featuring idyllic fall temperatures and an urban finish line.</value>
+        <value>This race offers a green, rolling course and phenomenal spectator support.</value>
       </setting>
       <setting name="target_event_link" serializeAs="String">
-        <value>http://www.ironman.com/triathlon/events/americas/ironman/louisville.aspx</value>
+        <value>http://www.ironman.com/triathlon/events/americas/ironman/wisconsin.aspx</value>
       </setting>
       <setting name="team_contact_email" serializeAs="String">
         <value>rebecca@teamorphans.com</value>
       </setting>
       <setting name="team_fundraising_link" serializeAs="String">
         <value>https://www.teamorphans.com/rebecca/</value>
-      </setting>
-      <setting name="team_team_orphans_link" serializeAs="String">
-        <value>https://www.teamorphans.com</value>
       </setting>
     </virtualtri.Properties.Settings>
   </applicationSettings>
