Updating settings for 2017 season

--- a/virtualtri/Web.config
+++ b/virtualtri/Web.config
@@ -98,19 +98,19 @@
         <value>Rebecca</value>
       </setting>
       <setting name="start_date" serializeAs="String">
-        <value>4/1/2016</value>
+        <value>4/1/2017</value>
       </setting>
       <setting name="end_date" serializeAs="String">
-        <value>9/30/2016</value>
+        <value>9/24/2017</value>
       </setting>
       <setting name="target_event_name" serializeAs="String">
-        <value>Ironman Wisconsin</value>
+        <value>Ironman Chattanooga</value>
       </setting>
       <setting name="target_event_description" serializeAs="String">
-        <value>This race offers a green, rolling course and phenomenal spectator support.</value>
+        <value>Chattanooga offers a scenic, fast course with a downstream swim on the Tennessee River.</value>
       </setting>
       <setting name="target_event_link" serializeAs="String">
-        <value>http://www.ironman.com/triathlon/events/americas/ironman/wisconsin.aspx</value>
+        <value>http://www.ironman.com/triathlon/events/americas/ironman/chattanooga.aspx</value>
       </setting>
       <setting name="team_contact_email" serializeAs="String">
         <value>rebecca@teamorphans.com</value>
